Revision history for {{$dist->name}}

{{$NEXT}}

0.004     2012-11-06 14:16:20 America/New_York
          port the default_email feature from the Apple address book plugin

0.003     2012-02-27 13:19:20 America/New_York
          change how notes fields are processed

          add a "use middle" field; if set and false, the person's middle name
          is not used

0.002     2010-12-07 09:08:02 America/New_York
          explicitly state perl 5.10 requirement

0.001     2010-12-06 22:07:36 America/New_York